# wallet-service

./: pyproject.toml
app/: __main__.py  app.py
app/api/: routes.py
app/models/: __init__.py  base.py  transaction.py  user.py
app/service/: __init__.py  service.py
app/startups/: database.py
tests/: test_api.py
