[tool.poetry]
name = "wallet-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wallet_service"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
